tests/tokenize/wrong_char.token.err
Error: Unexpected char in input
   ╭─[tests/tokenize/wrong_char.scm:3:1]
   │
 3 │ ```
   · ┬  
   · ╰── Unexpected char `
───╯
